# LLM-MemEval

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 98244738ac12_initial.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: constants.py  exceptions.py
backend/app/database/: base.py  session.py
backend/app/evaluators/: recall_engine.py
backend/app/experiments/: orchestrator.py  pipeline.py
backend/app/generators/: conversation_generator.py  fact_injector.py
backend/app/logger/: experiment_logger.py  json_exporter.py
backend/app/metrics/: engine.py
backend/app/models/: __init__.py  experiment.py  fact.py  message.py  metrics_snapshot.py  recall_result.py
backend/app/repositories/: experiment_repository.py  fact_repository.py  message_repository.py  metrics_repository.py  recall_repository.py
backend/app/schemas/: experiment.py  metrics.py  strategy.py
backend/app/services/: experiment_service.py
backend/app/strategies/: __init__.py  base.py  no_memory.py  registry.py  sliding_window.py  summarization.py
backend/app/utils/: text_utils.py
backend/app/visualization/: engine.py
backend/results/1ac17232-7105-455f-9169-326ff106d862/: config.json  conversation.jsonl  facts.json  metrics.jsonl  recall_results.jsonl
backend/results/3754bf12-78e6-462f-ade0-dc808f010115/: config.json  conversation.jsonl  facts.json  metrics.jsonl  recall_results.jsonl
(+78 files in other folders)
